src/main/kotlin/org/limepepper/gdb_plugin/parser/Gdb.bnf
{
  parserClass="org.limepepper.gdb_plugin.parser.GdbParser"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="Gdb"
  psiImplClassSuffix="Impl"
  psiPackage="org.limepepper.gdb_plugin.psi"
  psiImplPackage="org.limepepper.gdb_plugin.psi.impl"

  elementTypeHolderClass="org.limepepper.gdb_plugin.psi.GdbTypes"
  elementTypeClass="org.limepepper.gdb_plugin.psi.GdbElementType"
  tokenTypeClass="org.limepepper.gdb_plugin.psi.GdbTokenType"

  psiImplUtilClass="org.limepepper.gdb_plugin.psi.impl.GdbPsiUtil"

  tokens=[
    // Whitespace and structure
    WHITESPACE='regexp:\s+'
    NEWLINE='regexp:\r\n|\r|\n'
    COMMENT='regexp:#.*'
    
    // Basic commands (without x, print, p, break, b)
    COMMAND_EXECUTION='regexp:(run|r|start|continue|c|step|s|next|n|finish|until|u|kill|quit|q|detach)'
    COMMAND_BREAKPOINT='regexp:(tbreak|hbreak|thbreak|rbreak|watch|rwatch|awatch|catch|delete|enable|disable|condition)'
    COMMAND_STACK='regexp:(backtrace|bt|frame|f|up|down|select-frame)'
    COMMAND_DATA='regexp:(display|output|printf|call|return|examine|info|i|show|list|l|disassemble|disas)'
    COMMAND_CONFIG='regexp:(set|unset|source|file|exec-file|symbol-file|core-file|target|attach|load)'
    COMMAND_USER='regexp:(define|document|end|if|else|while|loop_break|loop_continue)'
    
    // Special command keywords
    X_CMD='x'
    PRINT_CMD='print'
    P_CMD='p'
    BREAK_CMD='break'
    B_CMD='b'

    // Format specifiers (as tokens so they can have their own highlighting)
    FORMAT_SPEC='regexp:/[0-9]*[xotducsiaf]?[bhwg]?'

    // Literals
    NUMBER='regexp:\d+'
    HEX_NUMBER='regexp:0x[0-9a-fA-F]+'
    STRING='regexp:"([^"\\]|\\.)*"'
    REGISTER='regexp:\$[a-zA-Z_][a-zA-Z0-9_]*|\$\d+'
    IDENTIFIER='regexp:[a-zA-Z_][a-zA-Z0-9_]*'
    
    // Operators
    OPERATOR='regexp:(==|!=|<=|>=|<|>|&&|\|\||!|<<|>>|[+\-*/%&|^~])'
    ASSIGNMENT='regexp:(=|\+=|-=|\*=|/=)'
    ADDRESS_MARKER='*'
    
    // Punctuation
    LPAREN='('
    RPAREN=')'
    LBRACKET='['
    RBRACKET=']'
    LBRACE='{'
    RBRACE='}'
    COMMA=','
    SEMICOLON=';'
    COLON=':'
    DOT='.'
    ARROW='->'
    SCOPE_RESOLUTION='::'
    
    // Special
    CONDITION_IF='if'
  ]
}

// Grammar rules
gdbFile ::= item*

private item ::= statement | comment_line | NEWLINE

// Single statement type with command + arguments
statement ::= command_with_format argument* condition? {
  mixin="org.limepepper.gdb_plugin.psi.impl.GdbStatementMixin"
  implements="org.limepepper.gdb_plugin.psi.GdbNamedElement"
  methods=[getCommandName getFormatSpec]
}

// Command with optional format specification
command_with_format ::= simple_command
                     | formatted_command

// Simple commands without format specs
simple_command ::= COMMAND_EXECUTION
         | COMMAND_BREAKPOINT  
         | COMMAND_STACK
         | COMMAND_DATA
         | COMMAND_CONFIG
         | COMMAND_USER

// Commands with format specs: x/format, print/format, break *addr
formatted_command ::= (X_CMD | PRINT_CMD | P_CMD) FORMAT_SPEC?
                   | (BREAK_CMD | B_CMD) ADDRESS_MARKER?

// Rest of grammar stays the same...
comment_line ::= COMMENT

argument ::= expression
          | STRING
          | IDENTIFIER
          | address
          | register_ref {
  mixin="org.limepepper.gdb_plugin.psi.impl.GdbArgumentMixin"
}

// Expressions
expression ::= logical_or_expr

logical_or_expr ::= logical_and_expr ('||' logical_and_expr)*

logical_and_expr ::= equality_expr ('&&' equality_expr)*

equality_expr ::= relational_expr (('==' | '!=') relational_expr)*

relational_expr ::= additive_expr (('<' | '>' | '<=' | '>=') additive_expr)*

additive_expr ::= multiplicative_expr (('+' | '-') multiplicative_expr)*

multiplicative_expr ::= unary_expr (('*' | '/' | '%') unary_expr)*

unary_expr ::= ('!' | '-' | '+' | ADDRESS_MARKER)? primary_expr

primary_expr ::= NUMBER
              | HEX_NUMBER
              | STRING
              | register_ref
              | function_call
              | member_access
              | array_access
              | IDENTIFIER
              | LPAREN expression RPAREN

// Specific constructs
address ::= ADDRESS_MARKER (HEX_NUMBER | IDENTIFIER | LPAREN expression RPAREN)

register_ref ::= REGISTER

function_call ::= IDENTIFIER LPAREN (expression (COMMA expression)*)? RPAREN

member_access ::= (IDENTIFIER | register_ref) (DOT | ARROW) IDENTIFIER

array_access ::= (IDENTIFIER | register_ref) LBRACKET expression RBRACKET

// Conditional constructs
condition ::= CONDITION_IF expression
